[package]
edition = "2021"
name = "dot15d4-driver"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[dependencies]
dot15d4-util = { version = "0.0.1", path = "../dot15d4-util", default-features = false }

fugit = "0.3"
portable-atomic = "1"
static_cell = "2"
paste = { version = "1", optional = true }
const_for = "0.1"

cortex-m = { version = "0.7", features = [
    "critical-section-single-core",
], optional = true }
nrf52840-pac = { version = "0.12", features = ["rt"], optional = true }
nrf52811-pac = { version = "0.12", features = ["rt"], optional = true }
nrf5340-net-pac = { version = "0.12", features = ["rt"], optional = true }

defmt = { version = "1.0", optional = true }
log = { version = "0.4.21", optional = true }

rtos-trace = { version = "0.2", optional = true }

arbitrary = { version = "1.3.2", features = ["derive"], optional = true }

[dev-dependencies]
cortex-m-rt = { version = "0.7.0" }
heapless = { version = "0.8" }
panic-probe = "1"
rtt-target = "0.6.2"


[features]
default = ["radio", "timer", "executor"]

nrf = ["dep:cortex-m"]
nrf52840 = ["dep:nrf52840-pac", "nrf"]
nrf52811 = ["dep:nrf52811-pac", "nrf"]
nrf5340-net = ["dep:nrf5340-net-pac", "nrf"]

executor = ["dep:paste"]
timer = []
radio = ["timer", "executor"]

log = ["dep:log", "dot15d4-util/log"]
defmt = ["dep:defmt", "dot15d4-util/defmt"]

# Use an external sleep timer clock source.
#
# Note: MUST be enabled while the LF clock pin (X1) is actively driven by an
#       external signal otherwise your hardware may be damaged.
ext-lf-clk = []

# GPIO tracing
executor-trace = ["executor"]
timer-trace = ["timer"]
radio-trace = ["radio"]

# SystemView tracing
rtos-trace = ["dep:rtos-trace", "dot15d4-util/rtos-trace"]

std = []
fuzz = ["dep:arbitrary"]

_clippy-std = ["std", "fuzz"]
_clippy-no-std = ["default", "nrf52840"]


[[example]]
name = "nrf-timer-measure-rtc-skew"
path = "examples/nrf/timer/measure-rtc-skew.rs"
required-features = ["nrf", "executor"]
# Note: This example must be built w/o default features.
