[package]
edition = "2021"
name = "dot15d4-examples-nrf52840"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[[bin]]
name = "embassy-net-udp"
path = "src/bin/embassy-net/udp.rs"
required-features = ["embassy-net"]

[[bin]]
name = "timer-sig"
required-features = ["timer-trace"]

[[bin]]
name = "timer-evt"
required-features = ["timer-trace"]

[dependencies]
cortex-m = { version = "0.7", features = [
    "inline-asm",
    "critical-section-single-core",
], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
dot15d4 = { version = "0.1.2", path = "../../dot15d4" }
embassy-executor = { git = "https://github.com/fg-cfh/embassy.git", branch = "rtos-trace", features = [
    "executor-thread",
] }
embassy-nrf = { git = "https://github.com/fg-cfh/embassy.git", branch = "rtos-trace", features = [
    # The time driver is only required for rtos-trace.
    "time-driver-rtc1",
], optional = true, default-features = false }

panic-probe = "1.0"
heapless = "0.8"
static_cell = "2.1"

# Required by embassy-net examples only:
dot15d4-embassy = { version = "0.0.1", path = "../../dot15d4-embassy", optional = true }
embassy-net = { git = "https://github.com/fg-cfh/embassy.git", branch = "rtos-trace", features = [
    "medium-ieee802154",
    "udp",
    "proto-ipv6",
], optional = true }

defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
rtos-trace = { version = "0.2", optional = true }
rtt-target = { version = "0.6.2", optional = true }

[features]
default = ["nrf52840", "embassy-net"]

embassy-net = ["dep:dot15d4-embassy", "dep:embassy-net"]

defmt = [
    "dep:defmt",
    "dep:rtt-target",
    "dot15d4/defmt",
    "dot15d4-embassy/defmt",
    "embassy-executor/defmt",
    "embassy-net/defmt",
    "panic-probe/print-defmt",
]
log = ["dep:log", "dep:rtt-target", "dot15d4/log", "dot15d4-embassy/log"]

executor-trace = ["dot15d4/executor-trace", "_gpio-trace"]
timer-trace = ["dot15d4/timer-trace", "_gpio-trace"]
radio-trace = ["dot15d4/radio-trace", "_gpio-trace"]
rtos-trace = [
    "dep:rtos-trace",
    "dep:rtt-target",
    "dep:embassy-nrf",
    "embassy-executor/rtos-trace",
    "dot15d4/rtos-trace",
    "dot15d4-embassy/rtos-trace",
]
_gpio-trace = []

tsch = ["dot15d4/tsch"]
tsch-coordinator = ["tsch", "dot15d4/tsch-coordinator"]

# Disable Enh-Ack-based synchronization in TSCH network
no-tsch-ack-sync = ["dot15d4/no-tsch-ack-sync"]

# Disable frame-based synchronization in TSCH network
no-tsch-frame-sync = ["dot15d4/no-tsch-frame-sync"]

# Disable clock drift adjustment in TSCH network
no-tsch-drift-adjustment = ["dot15d4/no-tsch-drift-adjustment"]

# Enables multi-device tests.
#
# Synchronizes the clock of multiple test devices with an external sleep timer
# clock source and GPIO synchronization signals.
#
# If enabled, a common anchor time point will by established across devices.
# Examples will block until the external clock signal is observed and the
# 'PIN_TIMER_EVENT' pin is toggled up and back down.
#
# Requires a two-device dot15d4 synchronized testbed.
#
# Note: MUST be enabled while the LF clock pin (X1) is actively driven by an
#       external signal otherwise your hardware may be damaged.
device-sync = ["dot15d4/ext-lf-clk", "timer-trace"]

# In multi-device tests, this feature must be enabled on the client while the
# server is marked with "device-sync" only.
device-sync-client = ["device-sync"]

# An internal helper attribute that allows us to apply clippy in std mode.
nrf52840 = [
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "embassy-executor/arch-cortex-m",
    "dot15d4/nrf52840",
    "dot15d4-embassy/nrf52840",
]
_clippy-std = ["embassy-executor/arch-std"]
_clippy-no-std = ["default"]
